Fri, Feb 1, 2008 Daniel R Fisher
1.  I changed the way that gamess2qmcbeaver.py gets the basis function
    and wavefunction parameters.  The old script was not working when
    there was more than 100 contracted basis functions.

Thu, Jan 17, 2008 Amos Anderson
1.  I fixed a bug that occurred when optimizing ci coefficients. I was
    getting sets of ci coefficients where all of them were zero, this
    was causing problems when update_SCF divides by the wavefunction.

2.  I fixed a minor bug preventing QMCEigenSearch from looking at the correct
    energies when deciding whether to increase the number of steps.

3.  I set QMCThreeBodyCorrelationFunctionParameters to use Dan's
    gaussianParamDepMatrix whenever we're not reproducing NE && EE
    Jastrows with NEE. The regular method was not producing a
    matrix.

Fri, Jan 11, 2008 Amos Anderson
1.  I uploaded all the scripts I've been working on. They'll plot
    jastrows and convergence data. Unfortunately, I haven't bothered
    with documenting them too carefully. The ones that actually plot
    something require gnuplot 4.3.

Tue, Dec 18, 2007 Amos Anderson
1.  I changed all the function calls to fortran libraries so that the calls
    are routed through a macro in cppblas.h. Some machines need an underscore
    after the function name, others don't, so you'll have to manually toggle this
    in order to compile on machines like AIX.

Mon, Dec 17, 2007 Amos Anderson
1.  I added skewness and kurtosis to the statistics gathering. It doesn't
    appear to add significant expense to calculations, and the results seem
    interesting.

2.  Restart ckmf files will preserve all comments from parent ckmf file.
    Also, the code will add some data about the optimization to the restart file.
    My intent is to embed some data into the restart file containing info about
    the wavefunction. This is important to know which calculations are supposed